Add MangeUserService and test