@@ -1,5 +1,6 @@
 package org.example.multiusershoplist.Service;
 
+import jakarta.persistence.EntityManager;
 import org.example.multiusershoplist.Model.Order;
 import org.example.multiusershoplist.Model.User;
 import org.example.multiusershoplist.Repo.OrderMangeRepo;
@@ -10,6 +11,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 
@@ -25,7 +27,10 @@ class OrderServiceTest {
     private UserMangeRepo userRepo;
 
     @Autowired
-    private OrderService service;
+    private OrderService orderService;
+
+    @Autowired
+    private EntityManager em;
 
     private Order order;
     private User user;
@@ -33,40 +38,49 @@ class OrderServiceTest {
 
     @BeforeEach
     void setUp() {
+
+
+        user = new User();
+        user.setNick("Test1");
+        user.setPassword("password");
+        user.setEmail("ajgdj");
+        userRepo.save(user);
+
         order = new Order();
         order.setName("marchewka");
         order.setHowMany(1);
         order.setDateOfMake(LocalDate.now());
-        user = new User();
-        user.setNick("Test");
-        user.setPassword("password");
-        user.setEmail("ajgdj");
-        userRepo.save(user);
-        order.setSender(user);
+        order.setSenderNick(user.getNick());
+
+
         order.setId(repo.save(order).getId());
+
     }
 
     @AfterEach
     void tearDown() {
-        repo.delete(order);
-        userRepo.delete(user);
+        repo.deleteAll();
+        userRepo.deleteAll();
     }
+
 
     @Test
     void addOrder() {
        Order newOrder = new Order();
        newOrder.setName("marchewka");
        newOrder.setHowMany(1);
-
-       service.addOrder(newOrder,user.getNick());
-       assertEquals(newOrder, userRepo.findAllUserOrders(user.getNick(), PageRequest.of(0,1)).getContent().getFirst());
+       newOrder.setDateOfMake(LocalDate.now());
+       newOrder.setSenderNick(user.getNick());
+       repo.save(newOrder);
+       orderService.addOrder(newOrder,user.getNick());
+      assertEquals(newOrder,userRepo.findAllUserOrders(user.getNick(),PageRequest.of(1, 1)).getContent().get(0));
     }
 
     @Test
     void removeOrder() {
         user.addOrder(order);
         userRepo.save(user);
-        service.removeOrder(order.getId(),user.getNick());
+        orderService.removeOrder(order.getId(),user.getNick());
         assertTrue(userRepo.findAllUserOrders(user.getNick(), PageRequest.of(0,1)).getContent().isEmpty());
 
     }
@@ -77,7 +91,7 @@ class OrderServiceTest {
         userRepo.save(user);
 
         String newName = "marchewka";
-        service.updateOrderName(order,newName);
+        orderService.updateOrderName(order,newName);
 
         assertEquals(newName,repo.findById(order.getId()).get().getName());
         assertEquals(newName, userRepo.findAllUserOrders(user.getNick(), PageRequest.of(0,1)).getContent().getFirst().getName());
@@ -89,7 +103,7 @@ class OrderServiceTest {
         userRepo.save(user);
 
        int newHowMany = 20;
-        service.updateOrderHowMany(order,newHowMany);
+        orderService.updateOrderHowMany(order,newHowMany);
 
         assertEquals(newHowMany,repo.findById(order.getId()).get().getHowMany());
         assertEquals(newHowMany, userRepo.findAllUserOrders(user.getNick(), PageRequest.of(0,1)).getContent().getFirst().getHowMany());
